style.css
/* ... */
#header .desc {margin:0;font-size:14px;color:#2BA6CB;text-shadow:0 0 5px #DDD}


/*-----------------------------------------------------------------------------------*/
/* = Navigation
/*-----------------------------------------------------------------------------------*/
#navi {margin-bottom:20px;}
#navi .menu {}
#navi .menu li {list-style: none; text-align: left; display: block;}
#navi .menu li a {display: block; padding: 7.5px 15px; font-size: 12pt; font-weight: bold;}
#navi .menu li ul {display:none; position:absolute; width:200px; z-index:100; margin-left:0;}
#navi .menu ul li {display: block; list-style: none; text-align: left; position:relative;}
#navi .menu ul li a {display: block; padding: 7.5px 10px; font-size: 12pt; font-weight: bold;}

#navi .menu li ul ul, 
#navi .menu li ul ul ul {margin-top:0; padding:0; margin-left:200px; top:0;}

#navi .menu li:hover ul ul, 
#navi .menu li:hover ul ul ul, 
#navi .menu li:hover ul ul ul ul { left: -999em; display: none; }

#navi .menu li:hover ul,
#navi .menu li li:hover ul, 
#navi .menu li li li:hover ul, 
#navi .menu li li li li:hover ul { left: auto; display: block; }

/*** navi color ***/
#navi .menu { background: #2BA6CB; box-shadow: 0px 2px 2px #DDDDDD; }
#navi .menu > li {background: #2BA6CB; /*url(img/spacer.png) center right no-repeat #DEDEDE;*/}
#navi .menu > li:last-child{background:none;}
#navi .menu > li:hover, 
#navi .menu > li.active,
#navi .menu > li.active:hover { background: #2795B6; }
#navi .menu li a { color: #fff; text-shadow: 0px 0px 5px #DDDDDD;  }
#navi .menu li:hover a { color: #fff; }
#navi .menu ul li a {color: #fff; background: #2BA6CB;}
#navi .menu ul li a:hover {color: #fff; background: #2795B6;}

@media screen and (max-width: 768px) {
	#navi .menu > li {
		display: block;
		background-image: none;
		text-align: left;
	}	
	#navi .menu li ul {
		position: relative;
		display: block;
		width: 100%;
	}	
	#navi .menu li ul li {
		border-left:4px solid red;
	}
	#navi .menu li ul ul, 
	#navi .menu li ul ul ul,
	#navi .menu li ul ul ul ul { 
		width: 98%;
		float: right;
		margin-left:0;
	}
	#navi .menu li ul ul li, 
	#navi .menu li ul ul ul li,
	#navi .menu li ul ul ul ul li { 
		border-left:4px solid red;
	}
	#navi .menu li:hover ul ul, 
	#navi .menu li:hover ul ul ul,
	#navi .menu li:hover ul ul ul ul { 
		left: auto;
		display: block; 
	}
}


/*-----------------------------------------------------------------------------------*/
/* = Content
/*-----------------------------------------------------------------------------------*/
#content {  
	margin-bottom: 20px; 
}
#main {
	padding: 0 5px;
}
#main .post-title,
#main .page-title,
#main .archive-title { 
	font-size:32px;
    color: #2BA6CB;
	text-shadow: 0px 0px 5px #DDDDDD;
}
.home #main .page {
	border-top: 1px solid #DDD;
}
#main .entry-content {
	padding: 10px 0;
	margin: 10px 0;
	min-height: 100px;
	border-top: 1px solid #DDD;
	border-bottom: 1px solid #DDD;
}
#main .type-post .entry-content .post-img {
	width: 100%;
	margin-bottom: 10px;
}
#main #breadcrumbs {
	border-bottom: 1px solid #CCC;
	line-height: 1.2em;
	padding: 5px;
	margin-top: 15px;
	font-size: 10pt;
	background: #EEE;
	font-family: Arial, Helvetica, Sans-Serif;
}
#main .read {
    overflow: auto;
    z-index: 2;
    padding-bottom: 10px;
    margin-bottom: 20px;
    border-bottom: 1px solid #DDDDDD;
}
#main .loop {
    overflow: auto;
    padding: 10px 0;
    margin-bottom: 10px;
	/*border: 1px solid #DDDDDD;*/
}
#main .loop .post-title {
	font-size: 24px;
	margin: 0;
}
#main .loop .image {
	float: left;
	margin: 0 5px 5px 0;
}
#main .loop .image + * {
	/*clear: left;*/
}
#main .post-meta {
	color:#2BA6CB;
	font-size: 8pt;
	font-style: italic;
	text-align: right;
	text-shadow:0 0 5px #DDD
}
#main .post-reply {
    margin: 10px 0;
}

.page-link {
	clear: both;
	color: #000;
	font-weight: bold;
	line-height: 48px;
	word-spacing: 0.5em;
}
.page-link a:link,
.page-link a:visited {
	background: #f1f1f1;
	color: #333;
	font-weight: normal;
	padding: 0.5em 0.75em;
	text-decoration: none;
}
.page-link a:active,
.page-link a:hover {
	color: #2BA6CB;
}
body.page .edit-link {
	clear: both;
	display: block;
}

/* Navigation */
.navigation {
	color: #888;
	font-size: 12px;
	line-height: 18px;
	overflow: hidden;
	padding: 10px;
	background: #EEEEEE;
	margin-top: 10px;
	border-top: 1px solid #DDDDDD;
	border-bottom: 1px solid #DDDDDD;
}
.nav-previous {
	float: left;
	width: 50%;
}
.nav-next {
	float: right;
	text-align: right;
	width: 50%;
}


/*-----------------------------------------------------------------------------------*/
/* = Sidebar
/*-----------------------------------------------------------------------------------*/
#sidebar.topside {margin-top:20px;}
#sidebar.botside {margin-top:20px;}
#sidebar .sidebar_wrapper {}
/*
#sidebar .sideitem {
	width: 220px;
	margin: 0 5px;
	display: inline-block;
	vertical-align: top;
}
@media screen and (max-width: 768px) {
#sidebar .sideitem { margin:0; width: 100%; }
}
*/
#sidebar .sidetitle { 
	background: #eee;
	font-size:15px; 
	color:#2BA6CB; 
	font-weight:bold; 
	padding:8px 10px; 
	display:block; 
	border-bottom: 1px solid #DDDDDD;
	margin-top: 0px;
	margin-bottom: 5px;
}
#sidebar .sideitem {
	margin-bottom: 10px;
}
#sidebar.topside .sideitem,
#sidebar.botside .sideitem {
	width: 220px;
	margin: 0 5px;
	display: inline-block;
	vertical-align: top;
}
@media screen and (max-width: 768px) {
#sidebar.botside .sideitem { margin:0; width: 100%; }
}
#sidebar ul {
	clear:both;
	margin: 0px;
	padding: 0px;
	list-style-position:inside;
}
#sidebar ul > li {
	list-style: none;
	padding: 4px 4px 4px 0;
}
#sidebar ul > li + li {
    border-top: 1px dotted #2BA6CB;
}
#sidebar ul > li a {
	padding: 0; line-height: 22px; 
	display: block; font-size: 14px;
	text-decoration: none;
}
#sidebar ul > li a:hover {
	text-decoration: underline;
}
/* ... */

